Fixed Overflow Glitch

--- a/frontend/src/components/SignUp/SignUp.css
+++ b/frontend/src/components/SignUp/SignUp.css
@@ -86,8 +86,8 @@
 }
 
 @media (min-width: 1024px){
-    *{
-        overflow: hidden;
+    .SignUp{
+        overflow:hidden;
     }
     
     main {
